@startuml
title Vault Data Model
hide circle

skinparam class {
  backgroundColor #white
}

entity "provider" {
  *id: number
  --
  name: text
  providerId: number
  country: string
}

entity "user" {
  *id: number
  --
  name: text
  email: text
}

entity "token" {
  *id: number
  --
  *user_id: number <FK>
  *provider_id: number <FK>
  access_token: text
  refresh_token: text
  expiry: number
  scope: text
}
token --> user
token --> provider

@enduml